# cypose

./: .gitignore  404.html  CHANGELOG  README.md  benchmark_segmentation.sh  cell_counter_v2.py  classification_comparisons.py  convert_masks_for_cellpose.py  env.yml  index.html  mkdocs.yml  model_comparisons.py  pyproject.toml  run_classification.py  run_gui.py  run_segmentation.py  run_segmentation.spec  run_segmentation.spec.bak  run_segmentation_backup.py  run_segmentation_class.py  run_segmentation_old.py  run_segmentation_test.py  segmentation_comparisons.py  shell.nix  test_segmentation.sh  train_cellpose.sbatch  train_classification_model.py  train_omnipose.sbatch
.github/workflows/: test.yml
classification/: index.html
data/: FILE_HASHES
data_preparation_scripts/: convert_nd2_to_frame_tif.py  convert_tif_to_frame_tif.py  diff_masks.py
docs/: classification.md  index.md  installation.md  models.md  segmentation.md
installation/: index.html
models/: 7002_test2_classifier_model_30.pth  index.html
models/7002/: 7002_test3_classifier_model_30.pth  7002_test4_classifier_model_30.pth  7002_test_classifier_model_30.pth
models/Classifier/: 7002_GFP_localization_classifier_model.pth
search/: search_index.json
segmentation/: index.html
src/classification/: classification_comparisons_batch.py
src/segmentation/: segmentation_comparisons.py
src/train_scripts/: train_classification_model.py  train_classification_model_ana.py  train_cpc_classification_model.py
