[tool.poetry]
name = "cyanosegment"
version = "0.1.0"
description = ""
authors = ["Zach Maas <zach.maas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
jupyter = "^1.0.0"
jupyterlab = "^4.0.6"
torchvision = "^0.15.2"
cellpose = {extras = ["gui"], version = "^2.2.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
